updated blog image extensions

--- a/blog.html
+++ b/blog.html
@@ -256,7 +256,7 @@ li.dropdown {
 
                     <div class="col-lg-6 col-sm-6">
                         <div class="service-cover">
-                            <img src="assets/images/blog/public-hearing.jpg" alt="">
+                            <img src="assets/images/blog/public-hearing.jpeg" alt="">
                             <div class="serv-det">
                                <h4>PUBLIC HEARING AS PART OF THE ESIA FOR THE EWOYAA LITHIUM PROJECT</h4>
                                 <h8>13-02-2024</h8>
@@ -297,7 +297,7 @@ li.dropdown {
 
                     <div class="col-lg-6 col-sm-6">
                        <div class="service-cover">
-                           <img src="assets/images/blog/workshop-2.jpg" alt="">
+                           <img src="assets/images/blog/workshop-2.jpeg" alt="">
                            <div class="serv-det">
                               <h4>VAMED/OHC HEALTH CARE WASTE MANAGEMENT WORKSHOP</h4>
                                <h8>08-12-2023</h8>
@@ -317,7 +317,7 @@ li.dropdown {
 
                    <div class="col-lg-6 col-sm-6">
                        <div class="service-cover">
-                           <img src="assets/images/blog/workshop.jpg" alt="">
+                           <img src="assets/images/blog/workshop.jpeg" alt="">
                            <div class="serv-det">
                               <h4>VAMED/OHC HEALTH CARE WASTE MANAGEMENT WORKSHOP</h4>
                                <h8>07-12-2023</h8>
@@ -358,7 +358,7 @@ li.dropdown {
 
                    <div class="col-lg-6 col-sm-6">
                        <div class="service-cover">
-                           <img src="assets/images/blog/atl-lithium.jpg" alt="">
+                           <img src="assets/images/blog/atl-lithium.jpeg" alt="">
                            <div class="serv-det">
                               <h4>ATLANTIC LITHIUM LIMITED</h4>
                                <h8>14-11-2023</h8>
