Update last blog image extension

--- a/blog.html
+++ b/blog.html
@@ -398,7 +398,7 @@ li.dropdown {
 
                     <div class="col-lg-6 col-sm-6">
                         <div class="service-cover">
-                            <img src="assets/images/blog/BLOGENV1.jpg" alt="">
+                            <img src="assets/images/blog/BLOGENV1.jpeg" alt="">
                             <div class="serv-det">
                                <h4>ENVIRONMENTAL IMPACT ASSESSMENT FOR A LARGE-SCALE GOLD MINING PROJECT</h4>
                                 <h8>02-06-2021</h8>
