--- a/gallery.html
+++ b/gallery.html
@@ -245,39 +245,39 @@ li.dropdown {
 
 
             <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter irrigation">
-                <img src="assets/images/gallery/gallery12.jpg" class="img-responsive">
+                <img src="assets/images/gallery/gallery12.jpeg" class="img-responsive">
             </div>
 
             <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter sprinkle">
-                <img src="assets/images/gallery/gallery13.jpg" class="img-responsive">
+                <img src="assets/images/gallery/gallery13.jpeg" class="img-responsive">
             </div>
 
             <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter irrigation">
-                <img src="assets/images/gallery/gallery14.jpg" class="img-responsive">
+                <img src="assets/images/gallery/gallery14.jpeg" class="img-responsive">
             </div>
 
             <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter irrigation">
-                <img src="assets/images/gallery/gallery15.jpg" class="img-responsive">
+                <img src="assets/images/gallery/gallery15.jpeg" class="img-responsive">
             </div>
             
             <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter irrigation">
-                <img src="assets/images/gallery/gallery16.jpg" class="img-responsive">
+                <img src="assets/images/gallery/gallery16.jpeg" class="img-responsive">
             </div>
 
             <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter irrigation">
-                <img src="assets/images/gallery/gallery17.jpg" class="img-responsive">
+                <img src="assets/images/gallery/gallery17.jpeg" class="img-responsive">
             </div>
 
             <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter irrigation">
-                <img src="assets/images/gallery/gallery18.jpg" class="img-responsive">
+                <img src="assets/images/gallery/gallery18.jpeg" class="img-responsive">
             </div>
 
             <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter irrigation">
-                <img src="assets/images/gallery/gallery19.jpg" class="img-responsive">
+                <img src="assets/images/gallery/gallery19.jpeg" class="img-responsive">
             </div>
 
             <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter irrigation">
-                <img src="assets/images/gallery/gallery20.jpg" class="img-responsive">
+                <img src="assets/images/gallery/gallery20.jpeg" class="img-responsive">
             </div>
             <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter irrigation">
                 <img src="assets/images/gallery/gallery21.jpg" class="img-responsive">
@@ -285,19 +285,19 @@ li.dropdown {
 
 
             <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter irrigation">
-                <img src="assets/images/gallery/gallery8.jpg" class="img-responsive">
+                <img src="assets/images/gallery/gallery8.jpeg" class="img-responsive">
             </div>
 
             <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter sprinkle">
-                <img src="assets/images/gallery/gallery9.jpg" class="img-responsive">
+                <img src="assets/images/gallery/gallery9.jpeg" class="img-responsive">
             </div>
 
             <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter irrigation">
-                <img src="assets/images/gallery/gallery10.jpg" class="img-responsive">
+                <img src="assets/images/gallery/gallery10.jpeg" class="img-responsive">
             </div>
 
             <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter sprinkle">
-                <img src="assets/images/gallery/gallery11.jpg" class="img-responsive">
+                <img src="assets/images/gallery/gallery11.jpeg" class="img-responsive">
             </div>
             
             <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter irrigation">
