--- a/andrews.html
+++ b/andrews.html
@@ -247,7 +247,7 @@ li.dropdown {
                     <aside class="col-md-7">
                         <div class="project-info">
                             <h4>ANDREWS BERCHIE</h4>
-                            <h6>Assistant Consultant- Social Development and Communication Unit</h6>
+                            <h6>Social Development and Communication Expert</h6>
                              <br></br>
                             <p class="project-description"style="font-size:120%;color:black;text-align:justify">Andrews holds both a BA and an M. Phil degrees in Social Work from the University of Ghana. With expertise in community engagement, mobilization, quantitative and qualitative research, he excels in collecting and analysing rich qualitative and quantitative data both manually and with the use of software&apos;s such as CAPI. His experience includes working as a research assistant on various projects, such as "Utilizing Artificial Intelligence (AI) to Promote Sexual and Reproductive Health Outcomes for Adolescents with Disabilities in Ghana" (HASH) at the University of Ghana's Department of Social Work, "Inclusive Education for Learners with Visual Impairments in Ghana," and the "Child Labor Monitoring Systems in Ghana&apos;s Cocoa-Growing Areas" with Kuapa Cocoa, sponsored by Fairtrade. Together with his post graduate experience as a Teaching Assistant at the University of Ghana, before joining, NEMAS Consult, he has excellent skills in conducting community training on diverse social issues.</p>   
                             
