--- a/consultancy.html
+++ b/consultancy.html
@@ -317,8 +317,7 @@ li.dropdown {
 <tr>
     <td class="tg-6ivb"><span style="background-color:#EEE">2023-2024</span></td>
     <td class="tg-6ivb"><span style="background-color:#EEE">Fidelity Bank PLC</td>
-    <td class="tg-6ivb"><span style="background-color:#EEE">“Environmental and Social
-      Environmental, Social and Governance Compliance Audit for BSD Mining.
+    <td class="tg-6ivb"><span style="background-color:#EEE">Environmental, Social Governance Compliance Audit  for BSD Mining. <br> IFC Performance Standard applied
     </td>
     <td class="tg-6ivb"><span style="background-color:#EEE">Report submitted to Client</td>
   </tr>
