--- a/janet.html
+++ b/janet.html
@@ -247,7 +247,7 @@ li.dropdown {
                     <aside class="col-md-7">
                         <div class="project-info">
                             <h4>JANET AFIA BOADU</h4>
-                            <h6>Assistant Environmental Consultant</h6>
+                            <h6>Environmental and Social Safeguard Officer</h6>
                              <br></br>
                             <p class="project-description"style="font-size:120%;color:black;text-align:justify">Janet Boadu holds a Bachelor's and a Master of Philosophy (MPhil) degrees in Environmental Science from the Kwame Nkrumah University of Science and Technology (KNUST). Her specialization is in bioremediation using activated carbon and soil health using heavy metals as an indicator. In addition, Janet professional knowledge in environmental and safety compliance, project impact evaluation, community and stakeholder engagement. Janet currently works as Assistant Environmental Officer at the Environmental Assessment and Management Unit of NEMAS Consult.</p>   
                             
