--- a/robert.html
+++ b/robert.html
@@ -247,7 +247,7 @@ li.dropdown {
                     <aside class="col-md-7">
                         <div class="project-info">
                             <h4>MR. ROBERT ATTA OBENG</h4>
-                            <h6>Development Expert</h6>
+                            <h6>Development Research/Policy Expert</h6>
                              <br></br>
                             <p class="project-description"style="font-size:120%;color:black;text-align:justify">Robert holds a Master’s Degrees in Research & Public Policy (Centre for Social Policy Studies) and another Master’s in Development Studies (Institute of Statistical, Social & Economic Research-ISSER); as well as a Bachelor’s Degree in Geography and Resource Management, all from the University of Ghana, Legon.  He also holds a Post-Graduate Diploma in Marketing.
 Robert has extensive experience in the areas of Social Development and has worked. 
