--- a/solomon.html
+++ b/solomon.html
@@ -247,7 +247,7 @@ li.dropdown {
                     <aside class="col-md-7">
                         <div class="project-info">
                             <h4>MR. SOLOMON ASIAMAH</h4>
-                            <h6>Transport Sector</h6>
+                            <h6>Transport Officer</h6>
                              <br></br>
                             <p class="project-description"style="font-size:120%;color:black;text-align:justify">Solomon holds a Higher National Diploma (HND) in Marketing from Accra Technical University (ATU). In 2019, he obtained his driving license from the Driver and Vehicle Licensing Authority (DVLA) and with his five years’ experience in defensive driving is currently with the Transport section of NEMAS Consult Limited, where he applies his skills to ensure efficient operations of his sector. His dedication to safety and professionalism makes him an asset to the Company.</p>   
                             
