--- a/yaw.html
+++ b/yaw.html
@@ -247,7 +247,7 @@ li.dropdown {
                     <aside class="col-md-7">
                         <div class="project-info">
                             <h4>Mr. YAW ASUBONTENG MPIANI</h4>
-                            <h6>Environmental Management Systems</h6>
+                            <h6>Environmental Risk and Management Expert</h6>
                              <br></br>
                             <p class="project-description"style="font-size:120%;color:black;text-align:justify">Yaw Mpiani holds a BSc degree in Environmental Science and an MSc degree in Oil and Gas Resource Management from the University of Cape Coast-Ghana. He also has certificates in Politics and Economics of International Energy, from Coursera Org., Introduction to Environmental Law, Policy and Renewable Energy from University of North Carolina through Coursera Org; and Green Building Entrepreneurship from Duke University.
 <br>Mpiani is an Environmental Consultant with specialty in Oil and Gas Development, Environmental Management Systems, Community Development and Sustainability. He worked as an Assistant Program Officer with the Environmental Protection Agency (EPA) and had the privilege of screening over 160 Projects for Environmental Permits, site screening and verification of small and medium scale environmental projects, drafting of environmental permit schedules of small and medium scale projects, and ensured environmental compliance, monitoring, enforcement, complaint resolution, environmental investigations and auditing, and community and stakeholder consultations. Mr. Mpiani is a full-time staff at the Environmental Assessment and Management Unit of NEMAS Consult.</p>   
